# npyodbc

./: .clang-format  .gitignore  README.md  meson.build  pyproject.toml  zensical.toml
.github/workflows/: artifacts_build.yml  deploy-docs.yml  docs.yml  npyodbc_tests.yml  ubuntu_build.yml
docs/: build-system.md  getting-started.md  index.md  reference.md
include/: npcontainer.h
npyodbc/: __init__.py  __init__.pyi  _npyodbc.pyi
overrides/: main.html
src/: npcontainer.cpp  npcontainer.h  npyodbcmodule.cpp
subprojects/: pyodbc.wrap
subprojects/packagefiles/patches/: cnxninfo.patch  connection.patch  cursor.patch  params.patch  pyodbcmodule.patch  pyproject.patch  row.patch  textenc.patch
subprojects/packagefiles/pyodbc/: meson.build  pyproject.toml
subprojects/packagefiles/pyodbc/src/: connection.h
tests/: conftest.py  docker-compose.yml  mysql_test.py  postgresql_test.py  sqlserver_test.py  test_numpy.py
website/: package-lock.json
